# multi-view_thermal

./: .gitignore  CMakeLists.txt  LICENSE  README.md
elibs/: CMakeLists.txt  test.py
include/: Axis.hpp  Camera.hpp  Cluster.hpp  Frustum.cpp  Frustum.hpp  GLPanel.hpp  Image.hpp  MainApp.cpp  MainApp.hpp  MainFrame.hpp  Mesh.hpp  RenderTarget.hpp  Shader.hpp  Util.hpp  pch.hpp  util.hpp
include/feature/: Harris.hpp
res/: .gitignore
resources/calib-img/: .gitignore  Untitled.ipynb  calibration.py  img_glob.py  main.py  matching.py  utils.py
resources/calib-img/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
resources/calib-img/normal-img/: normal-calibration.py
resources/calib-img/thermal-img/: thermal-calibration.py
scripts/: .gitignore  calibration.py  calibration.txt  image_prepare.py  img_glob.py  main.py  matching.py  normal.py  orb.py  prepare.py  ransac.py  test.py  utils.py
shader/: fragment.glsl  vertex.glsl
src/: Axis.cpp  Camera.cpp  Cluster.cpp  Frustum.cpp  GLPanel.cpp  Image.cpp  MainApp.cpp  MainFrame.cpp  Mesh.cpp  RenderTarget.cpp  Shader.cpp  Util.cpp  util.cpp
src/feature/: Harris.cpp
